modified css and html

--- a/index.html
+++ b/index.html
@@ -31,16 +31,20 @@
             <p>himalayas is our love letter to remote work- with 40,000+ jobs,<br>
                 unlock your carreer working from anywhere in the world.</p><br><br>
             <div class="search">
-                <a href="" target="_blank"><i class="fa fa-search">job title or keyword</i></a>
-                <a href="" target="_blank"><i class="fa fa-map-marker">anywhere</i></a>
+                <a href="" target="_blank"><i class="fa fa-search"></i></a>job title or keyword
+                <a href="" target="_blank"><i class="fa fa-map-marker"></i></a>anywhere
                 <p>jobs</p>
                 <button class="btn">search</button>
 
             </div>
 
-            <div class="footer">
-                <i></i>
-            </div>
+            <footer>
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-github"></i>
+                <i class="fa fa-instagram"></i>
+            </footer>
+
         </div>
 
     </div>
